@@ -15,13 +15,15 @@ asterisk (1:1.4.11~dfsg-2) UNRELEASED; urgency=low
     virtual package. This also means using the more complete OpenSSL libcurl
     backend instead of the GnuTLS one.
   * Add a versioned >= 1.4 dependency of asterisk in asterisk-h323.
+  * Don't use MAKEFLAGS as a variable in debian/rules since it has a special
+    meaning for make. Reported by Simon Richter.
 
   [ Kilian Krause ]
   * Add backport hook for Sarge. Update Dapper.
   * Update backports scripts for libcurl4*-dev
   * Fix IMAP crash with upstream source snipplet. (Closes: #440187)
 
- -- Faidon Liambotis <paravoid@debian.org>  Tue, 11 Sep 2007 18:19:49 +0300
+ -- Faidon Liambotis <paravoid@debian.org>  Wed, 12 Sep 2007 03:46:25 +0300
 
 asterisk (1:1.4.11~dfsg-1) unstable; urgency=low
 
